[package]
name = "side-proto"
version = "0.1.0-dev"
edition = "2021"

# [dependencies]
# prost = { workspace = true}
# prost-types = { workspace = true}
# tendermint-proto = "0.40.0"

# Optional dependencies
# tonic = { version = "0.12", optional = true, default-features = false, features = ["codegen", "prost"] }

# [features]
# default = ["grpc-transport"]
# grpc = ["tonic"]
# grpc-transport = ["grpc", "tonic/transport"]
# cosmwasm = []

# [package.metadata.docs.rs]
# all-features = true
# rustdoc-args = ["--cfg", "docsrs"]
