[package]
name = "side-proto"
version = "2.0.0-alpha.8"
edition = "2021"
description = "Rust Client for Side Chain"
readme = "README.md"
repository = "https://github.com/sideprotocol/side-rust"
license = "MIT OR Apache-2.0"

[dependencies]
prost = { workspace = true}
prost-types = { workspace = true}
cosmrs = {workspace = true }
tendermint-proto = { workspace = true }
cosmos-sdk-proto = { workspace = true }

# Optional dependencies
tonic = { version = "0.12", optional = true, default-features = false, features = ["codegen", "prost"] }
serde = { version = "1.0.203", optional = true, default-features = false, features = ["alloc"] }
pbjson = { package = "informalsystems-pbjson", optional = true, default-features = false, version = "0.7" }

[features]
default = ["grpc-transport"]
std = ["prost/std", "tendermint-proto/std"]
grpc = ["std", "tonic"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []
serde = ["dep:serde", "pbjson"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [package.metadata.docs.rs]
# all-features = true
# rustdoc-args = ["--cfg", "docsrs"]
